--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@media screen and(min-width:1024px){
+
 body{
     background-image: url('https://wallpapers.com/images/featured/weather-xqhs9axpy8btfd3y.jpg');
     background-repeat: no-repeat;
@@ -86,3 +88,4 @@ animation-iteration-count: infinite;
         font-size:230%;
         font-weight: bold;
     }
+}
