--- a/style.css
+++ b/style.css
@@ -100,4 +100,90 @@ animation-iteration-count: infinite;
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+
+    #text1{
+    position: relative;
+    font-size:250%;
+    text-align:center;
+    font-weight: bold;
+    animation-name:text;
+animation-duration:4s;
+animation-iteration-count: infinite;
+
+}
+    
+    @keyframes text{
+    0%{
+        color:rgb(255, 255, 255);
+    }
+    25%{
+        color: greenyellow;
+    }
+    50%{
+        color: rgb(0, 247, 255);
+    }
+    075%{
+        color:pink;
+    }
+    100%{
+        color:white;
+    }
+}
+
+    #number{
+    position: relative;
+    width:40%;
+    height:40px;
+    border-radius:4px;
+    border:1px solid orange;
+    left:30%;
+}
+
+#text2{
+    position: relative;
+    font-size:150%;
+    left:30%;
+}
+#select{
+    position: relative;
+    left:30%;
+    width:5%;
+    height:25px;
+    top:-3px;
+    border-radius:5px;
+}
+
+    #button{
+        position: relative;
+        width:10%;
+        height:30px;
+        border-radius:3px;
+        background-color: aqua;
+        font-weight: bold;
+        left:45%;
+    }
+    div{
+        position: relative;
+        background-color: aqua;
+        width:40%;
+        height:200px;
+        margin: auto;
+        border-radius:10px;
+        border: 3px solid rgb(1, 108, 248);
+        visibility: hidden;
+
+    }
+    #result_text{
+        text-align:center;
+        font-size:230%;
+        font-weight: bold;
+
+    }
+    #text3{
+        position: relative;
+        text-align: right;
+        font-size:230%;
+        font-weight: bold;
+    }
 }
